@@ -1,0 +1,3 @@
+<?php
+
+class Knowledgeroot_Module_Bootstrap_Exception extends Exception {}
