@@ -1,3 +1,6 @@
+20121202 - fhabermann
+* optimized bootstrap
+
 20121128 - fhabermann
 * added first stuff for modules
 
